# ma-thesis-project

./: README.md  pyproject.toml  requirements-gpu.txt.txt
data/processed_data/perplexity/calculation_statistics/: compare.txt  llama_perplexity_loss_statistics.csv  (+3 more)
data/raw_data/raw_response/: response_en_en_1.xml  response_en_en_2.xml  response_en_en_4.xml  response_en_zh_2.xml  response_en_zh_3.xml  response_en_zh_4.xml  response_en_zh_5.xml  response_en_zh_7.xml  response_zh_en_10.xml  response_zh_en_2.xml  response_zh_en_4.xml  response_zh_en_5.xml  response_zh_en_6.xml  response_zh_en_9.xml  response_zh_zh_3.xml  response_zh_zh_5.xml  response_zh_zh_6.xml  response_zh_zh_8.xml  response_zh_zh_9.xml
data/raw_data/response_text_merged/: response_en_en.txt  response_en_zh.txt  response_zh_en.txt  response_zh_zh.txt
scripts/: 10_plural_noun_frequency_en.py  11_plural_noun_frequency_zh.py  12_passive_voice_frequency_en.py  13_passive_voice_frequency_zh.py  14_dependency_parsing_en.py  15_dependency_parsing_zh.py  16_calculate_dependency_distance.py  17_calculate_dependency_direction.py  18_perplexity_llama.py  19_perplexity_qwen.py  1_generate_responses.py  20_calculate_perplexity_loss_statistics.py  21_text_statistics_visualization.py  22_pos_frequency_visualization.py  23_dependency_distance_visualization.py  24_dependency_direction_visualization.py  2_merge_xml.py  3_formalize_xml.py  4_extract_text_from_xml_responses.py  5_text_statistics.py  6_pos_tagging_en.py  7_pos_tagging_zh.py  8_pos_tag_counting.py  9_calculate_pos_statistics.py  draft.py
(+369 files in other folders)
